--- a/play.html
+++ b/play.html
@@ -417,10 +417,10 @@
       <!-- Home Page -->
       <section id="home" class="page active">
         <div class="hero">
-          <h1>Welcome to Our Creative World</h1>
+          <h1>Welcome to Our Buddhism Art in Ancient China: Presentation</h1>
           <p>
-            Discover amazing characters, interactive buttons, and stunning
-            triptych posters that will inspire your imagination and creativity.
+            The power is real. The story is forever. The time is now. By
+            Tiisetso, Tiyafallo, and Gobosaone.
           </p>
           <button class="btn btn-secondary" id="video-btn">
             <i class="fas fa-play"></i> Watch Video
