--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Multipage Website</title>
     <link
       rel="stylesheet"
+      transform-origin:
+      center;
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <style>
@@ -27,7 +29,7 @@
 
       body {
         background-color: var(--light-color);
-        background-image: url(pics/Budder\ 2.jpg);
+        background-image: url(pics/Budder\ 3.jpg); /* Ensure this path is correct or replace with a placeholder */
         color: var(--dark-color);
         background-size: cover;
         min-height: 100vh;
@@ -55,15 +57,10 @@
         gap: 1rem;
       }
 
-      .logo img {
-        height: 50px;
-        width: auto;
-      }
-
       .logo h1 {
         font-size: 1.8rem;
         font-weight: 700;
-        background: linear-gradient(to right, #fff, #ddd);
+        background: linear-gradient(to right, #ffffff, #ddd);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -123,6 +120,35 @@
         animation: fadeIn 0.5s ease;
       }
 
+      body.video-playing {
+        backdrop-filter: blur(8px);
+      }
+
+      body.video-playing #video-container {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000;
+        width: 80vw;
+        height: 80vh;
+        max-width: 1200px;
+        max-height: 800px;
+      }
+
+      body.video-playing #video-container iframe {
+        width: 100%;
+        height: 100%;
+      }
+
+      body.characters-active {
+        backdrop-filter: blur(8px);
+      }
+
+      body.characters-active .character-image {
+        transform: scale(1.05);
+      }
+
       .page.active {
         display: block;
       }
@@ -166,7 +192,7 @@
       .hero h1 {
         font-size: 3rem;
         margin-bottom: 1rem;
-        color: var(--primary-color);
+        color: var(--light-color);
       }
 
       .hero p {
@@ -174,9 +200,10 @@
         max-width: 800px;
         margin: 0 auto 2rem;
         line-height: 1.6;
+        color: var(--light-color);
       }
 
-      /* Button Page Styles */
+      /* Button Page Styles (used on Home for video button) */
       .button-container {
         display: flex;
         flex-direction: column;
@@ -257,10 +284,11 @@
       }
 
       .character-image {
-        height: 300px;
+        height: 400px;
         background-color: #ddd;
         background-size: cover;
         background-position: center;
+        transition: all 0.3s ease;
       }
 
       .character-info {
@@ -324,6 +352,32 @@
       .poster-caption h3 {
         font-size: 1.5rem;
         margin-bottom: 0.5rem;
+      }
+
+      /* Contact Page Styles */
+      .contact-content {
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 2rem;
+        text-align: center;
+        margin-top: 2rem;
+      }
+
+      .contact-content p {
+        font-size: 1.1rem;
+        margin-bottom: 1rem;
+        color: #555;
+      }
+
+      .contact-content a {
+        color: var(--primary-color);
+        text-decoration: none;
+        font-weight: 600;
+      }
+
+      .contact-content a:hover {
+        text-decoration: underline;
       }
 
       /* Footer Styles */
@@ -394,9 +448,7 @@
   <body>
     <header>
       <div class="logo">
-        <!-- Placeholder logo - replace with your actual logo -->
-
-        <h1>Budder Studio</h1>
+        <h1>Buddhism</h1>
       </div>
       <nav>
         <ul>
@@ -409,18 +461,20 @@
               >Triptych Poster</a
             >
           </li>
+          <li>
+            <a href="#" class="nav-link" data-page="contact">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <!-- Home Page -->
       <section id="home" class="page active">
         <div class="hero">
           <h1>Welcome to Our Buddhism Art in Ancient China: Presentation</h1>
           <p>
-            The power is real. The story is forever. The time is now. By
-            Tiisetso, Tiyafallo, and Gobosaone.
+            The power is real. The story is forever. The time is now. <br />
+            By: Tiisetso, Tiafalo, and Gobosaone.
           </p>
           <button class="btn btn-secondary" id="video-btn">
             <i class="fas fa-play"></i> Watch Video
@@ -429,7 +483,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+              src="https://www.youtube.com/embed/eab2ud_FTVk"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
@@ -438,7 +492,6 @@
         </div>
       </section>
 
-      <!-- Characters Page -->
       <section id="characters" class="page">
         <h2>Our Characters</h2>
         <div
@@ -463,7 +516,6 @@
         </div>
       </section>
 
-      <!-- Triptych Poster Page -->
       <section id="triptych" class="page">
         <h2>Triptych Poster Collection</h2>
         <div class="triptych-container">
@@ -502,6 +554,30 @@
           </div>
         </div>
       </section>
+
+      <section id="contact" class="page">
+        <h2>Contact Us</h2>
+        <div class="contact-content">
+          <p>
+            We'd love to hear from you! Reach out to us through the following:
+          </p>
+          <p>
+            Email:
+            <a href="mailto:info@budderstudio.com">info@budderstudio.com</a>
+          </p>
+          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+          <p>Address: 123 Art Street, Creative City, CA 90210</p>
+          <p style="margin-top: 1.5rem">
+            You can also find us on social media:
+          </p>
+          <div class="social-links" style="justify-content: center">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -512,7 +588,7 @@
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p class="copyright">© 2023 Creative Studio. All rights reserved.</p>
+        <p class="copyright">© 2025 Creative Studio. All rights reserved.</p>
       </div>
     </footer>
 
@@ -536,10 +612,17 @@
             // Show corresponding page
             const pageId = this.getAttribute("data-page");
             document.getElementById(pageId).classList.add("active");
+
+            // Toggle body class for characters page
+            if (pageId === "characters") {
+              document.body.classList.add("characters-active");
+            } else {
+              document.body.classList.remove("characters-active");
+            }
           });
         });
 
-        // Animated button effect
+        // Animated button effect (if present on Home page)
         const animatedBtn = document.getElementById("animated-btn");
         if (animatedBtn) {
           animatedBtn.addEventListener("click", function () {
@@ -559,18 +642,27 @@
           });
         }
 
-        // Video button functionality
+        // Video button functionality (on Home page)
         const videoBtn = document.getElementById("video-btn");
         const videoContainer = document.getElementById("video-container");
 
         if (videoBtn) {
           videoBtn.addEventListener("click", function () {
-            videoContainer.style.display =
-              videoContainer.style.display === "none" ? "block" : "none";
+            const isShowing = videoContainer.style.display === "block";
+            videoContainer.style.display = isShowing ? "none" : "block";
+            document.body.classList.toggle("video-playing", !isShowing);
+
+            if (!isShowing) {
+              // Pause video when hiding
+              const iframe = videoContainer.querySelector("iframe");
+              if (iframe) {
+                iframe.src = iframe.src; // Reset to pause video
+              }
+            }
           });
         }
 
-        // Explore button goes to characters page
+        // Explore button goes to characters page (if present)
         const exploreBtn = document.getElementById("explore-btn");
         if (exploreBtn) {
           exploreBtn.addEventListener("click", function () {
