--- a/index.html
+++ b/index.html
@@ -4,446 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multipage Website</title>
-    <link
-      rel="stylesheet"
-      transform-origin:
-      center;
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <style>
-      /* Global Styles */
-      :root {
-        --primary-color: #4a6fa5;
-        --secondary-color: #166088;
-        --accent-color: #4fc3f7;
-        --dark-color: #1a1a2e;
-        --light-color: #f8f9fa;
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-
-      body {
-        background-color: var(--light-color);
-        background-image: url(pics/Budder\ 3.jpg); /* Ensure this path is correct or replace with a placeholder */
-        color: var(--dark-color);
-        background-size: cover;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      /* Header Styles */
-      header {
-        background-color: transparent;
-        color: var(--dark-color);
-        padding: 1rem 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        position: sticky;
-        top: 0;
-        z-index: 100;
-      }
-
-      .logo {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-      }
-
-      .logo h1 {
-        font-size: 1.8rem;
-        font-weight: 700;
-        background: linear-gradient(to right, #ffffff, #ddd);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      nav ul {
-        display: flex;
-        list-style: none;
-        gap: 2rem;
-      }
-
-      nav a {
-        color: rgb(255, 255, 255);
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 1.1rem;
-        padding: 0.5rem 1rem;
-        border-radius: 5px;
-        transition: all 0.3s ease;
-        position: relative;
-      }
-
-      nav a:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-      }
-
-      nav a.active {
-        background-color: var(--accent-color);
-        color: var(--dark-color);
-      }
-
-      nav a::after {
-        content: "";
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        width: 0;
-        height: 3px;
-        background-color: var(--accent-color);
-        transition: width 0.3s ease;
-      }
-
-      nav a:hover::after {
-        width: 100%;
-      }
-
-      /* Main Content Styles */
-      main {
-        flex: 1;
-        padding: 2rem;
-        max-width: 1200px;
-        margin: 0 auto;
-        width: 100%;
-      }
-
-      .page {
-        display: none;
-        animation: fadeIn 0.5s ease;
-      }
-
-      body.video-playing {
-        backdrop-filter: blur(8px);
-      }
-
-      body.video-playing #video-container {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1000;
-        width: 80vw;
-        height: 80vh;
-        max-width: 1200px;
-        max-height: 800px;
-      }
-
-      body.video-playing #video-container iframe {
-        width: 100%;
-        height: 100%;
-      }
-
-      body.characters-active {
-        backdrop-filter: blur(8px);
-      }
-
-      body.characters-active .character-image {
-        transform: scale(1.05);
-      }
-
-      .page.active {
-        display: block;
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      h2 {
-        font-size: 2.5rem;
-        margin-bottom: 1.5rem;
-        color: var(--secondary-color);
-        position: relative;
-        display: inline-block;
-      }
-
-      h2::after {
-        content: "";
-        position: absolute;
-        bottom: -10px;
-        left: 0;
-        width: 50%;
-        height: 4px;
-        background-color: var(--accent-color);
-        border-radius: 2px;
-      }
-
-      /* Home Page Styles */
-      .hero {
-        text-align: center;
-        padding: 3rem 0;
-      }
-
-      .hero h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        color: var(--light-color);
-      }
-
-      .hero p {
-        font-size: 1.2rem;
-        max-width: 800px;
-        margin: 0 auto 2rem;
-        line-height: 1.6;
-        color: var(--light-color);
-      }
-
-      /* Button Page Styles (used on Home for video button) */
-      .button-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
-        padding: 2rem 0;
-      }
-
-      .btn {
-        padding: 1rem 2rem;
-        font-size: 1.1rem;
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        font-weight: 600;
-        display: inline-flex;
-        align-items: center;
-        gap: 0.5rem;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      .btn-primary {
-        background-color: var(--primary-color);
-        color: white;
-      }
-
-      .btn-primary:hover {
-        background-color: var(--secondary-color);
-        transform: translateY(-3px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      }
-
-      .btn-secondary {
-        background-color: var(--accent-color);
-        color: var(--dark-color);
-      }
-
-      .btn-secondary:hover {
-        background-color: #3ab4e0;
-        transform: translateY(-3px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      }
-
-      .btn-outline {
-        background-color: transparent;
-        border: 2px solid var(--primary-color);
-        color: var(--primary-color);
-      }
-
-      .btn-outline:hover {
-        background-color: var(--primary-color);
-        color: white;
-        transform: translateY(-3px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      }
-
-      /* Characters Page Styles */
-      .characters-grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
-        gap: 2rem;
-        padding: 2rem 0;
-      }
-
-      .character-card {
-        background-color: white;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-      }
-
-      .character-card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 12px 20px rgba(0, 0, 0, 0.15);
-      }
-
-      .character-image {
-        height: 400px;
-        background-color: #ddd;
-        background-size: cover;
-        background-position: center;
-        transition: all 0.3s ease;
-      }
-
-      .character-info {
-        padding: 1.5rem;
-      }
-
-      .character-info h3 {
-        font-size: 1.3rem;
-        margin-bottom: 0.5rem;
-        color: var(--secondary-color);
-      }
-
-      .character-info p {
-        color: #666;
-        line-height: 1.5;
-      }
-
-      /* Triptych Poster Page Styles */
-      .triptych-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        justify-content: center;
-        padding: 2rem 0;
-      }
-
-      .poster-panel {
-        flex: 1;
-        min-width: 300px;
-        max-width: 400px;
-        height: 500px;
-        background-color: #f0f0f0;
-        border-radius: 10px;
-        overflow: hidden;
-        position: relative;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease;
-      }
-
-      .poster-panel:hover {
-        transform: scale(1.03);
-      }
-
-      .poster-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      .poster-caption {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
-        color: white;
-        padding: 1.5rem;
-        text-align: center;
-      }
-
-      .poster-caption h3 {
-        font-size: 1.5rem;
-        margin-bottom: 0.5rem;
-      }
-
-      /* Contact Page Styles */
-      .contact-content {
-        background-color: white;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 2rem;
-        text-align: center;
-        margin-top: 2rem;
-      }
-
-      .contact-content p {
-        font-size: 1.1rem;
-        margin-bottom: 1rem;
-        color: #555;
-      }
-
-      .contact-content a {
-        color: var(--primary-color);
-        text-decoration: none;
-        font-weight: 600;
-      }
-
-      .contact-content a:hover {
-        text-decoration: underline;
-      }
-
-      /* Footer Styles */
-      footer {
-        background-color: #f8f9fa;
-        color: var(--dark-color);
-        padding: 2rem;
-        text-align: center;
-        border-top: 1px solid #e0e0e0;
-      }
-
-      .footer-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1.5rem;
-      }
-
-      .social-links {
-        display: flex;
-        gap: 1.5rem;
-      }
-
-      .social-links a {
-        color: rgb(72, 145, 179);
-        font-size: 1.5rem;
-        transition: color 0.3s ease;
-      }
-
-      .social-links a:hover {
-        color: var(--accent-color);
-      }
-
-      .copyright {
-        font-size: 0.9rem;
-        opacity: 0.8;
-      }
-
-      /* Responsive Styles */
-      @media (max-width: 768px) {
-        header {
-          flex-direction: column;
-          gap: 1rem;
-          padding: 1rem;
-        }
-
-        nav ul {
-          gap: 0.5rem;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
-
-        .hero h1 {
-          font-size: 2.2rem;
-        }
-
-        .triptych-container {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .poster-panel {
-          width: 100%;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header>
@@ -591,97 +152,6 @@
         <p class="copyright">© 2025 Creative Studio. All rights reserved.</p>
       </div>
     </footer>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        // Navigation functionality
-        const navLinks = document.querySelectorAll(".nav-link");
-        const pages = document.querySelectorAll(".page");
-
-        navLinks.forEach((link) => {
-          link.addEventListener("click", function (e) {
-            e.preventDefault();
-
-            // Remove active class from all links and pages
-            navLinks.forEach((l) => l.classList.remove("active"));
-            pages.forEach((page) => page.classList.remove("active"));
-
-            // Add active class to clicked link
-            this.classList.add("active");
-
-            // Show corresponding page
-            const pageId = this.getAttribute("data-page");
-            document.getElementById(pageId).classList.add("active");
-
-            // Toggle body class for characters page
-            if (pageId === "characters") {
-              document.body.classList.add("characters-active");
-            } else {
-              document.body.classList.remove("characters-active");
-            }
-          });
-        });
-
-        // Animated button effect (if present on Home page)
-        const animatedBtn = document.getElementById("animated-btn");
-        if (animatedBtn) {
-          animatedBtn.addEventListener("click", function () {
-            this.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Whoosh!';
-            this.style.transform = "scale(1.1)";
-
-            setTimeout(() => {
-              this.innerHTML = '<i class="fas fa-check"></i> Magic Happened!';
-              this.style.backgroundColor = "#4CAF50";
-            }, 1000);
-
-            setTimeout(() => {
-              this.innerHTML = '<i class="fas fa-magic"></i> Click Me Again!';
-              this.style.backgroundColor = "";
-              this.style.transform = "";
-            }, 3000);
-          });
-        }
-
-        // Video button functionality (on Home page)
-        const videoBtn = document.getElementById("video-btn");
-        const videoContainer = document.getElementById("video-container");
-
-        if (videoBtn) {
-          videoBtn.addEventListener("click", function () {
-            const isShowing = videoContainer.style.display === "block";
-            videoContainer.style.display = isShowing ? "none" : "block";
-            document.body.classList.toggle("video-playing", !isShowing);
-
-            if (!isShowing) {
-              // Pause video when hiding
-              const iframe = videoContainer.querySelector("iframe");
-              if (iframe) {
-                iframe.src = iframe.src; // Reset to pause video
-              }
-            }
-          });
-        }
-
-        // Explore button goes to characters page (if present)
-        const exploreBtn = document.getElementById("explore-btn");
-        if (exploreBtn) {
-          exploreBtn.addEventListener("click", function () {
-            navLinks.forEach((l) => l.classList.remove("active"));
-            pages.forEach((page) => page.classList.remove("active"));
-
-            document
-              .querySelector('.nav-link[data-page="characters"]')
-              .classList.add("active");
-            document.getElementById("characters").classList.add("active");
-
-            // Smooth scroll to top
-            window.scrollTo({
-              top: 0,
-              behavior: "smooth",
-            });
-          });
-        }
-      });
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
