--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               "
             ></div>
             <div class="character-info">
-              <h3>Valiant Warrior</h3>
+              <h3>Peaceful Warrior</h3>
               <p>
                 A fearless fighter with unmatched sword skills and unwavering
                 loyalty to the kingdom.
@@ -126,16 +126,36 @@
             Email:
             <a href="mailto:info@budderstudio.com">info@budderstudio.com</a>
           </p>
-          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-          <p>Address: 123 Art Street, Creative City, CA 90210</p>
+          <p>Phone: <a href="tel:+1234567890">+27 715 7809</a></p>
+          <p>Address: 312 Art Street, Creative City, CA 90210</p>
           <p style="margin-top: 1.5rem">
             You can also find us on social media:
           </p>
           <div class="social-links" style="justify-content: center">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/budderstudio/"
+              ><i class="fab fa-facebook"></i>
+              <ion-icon name="logo-facebook"></ion-icon
+            ></a>
+            <a href="https://www.instagram.com/budderstudio/"
+              ><i class="fab fa-instagram"></i
+              ><ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a href="https://www.logo-twitter.com/budderstudio/"
+              ><i class="fab fa-twitter"></i
+              ><ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a href="https://www.logo-linkedin.com/budderstudio/"
+              ><i class="fab fa-linkedin"></i
+              ><ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+            <script
+              type="module"
+              src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+            ></script>
+            <script
+              nomodule
+              src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+            ></script>
           </div>
         </div>
       </section>
@@ -143,11 +163,31 @@
 
     <footer>
       <div class="footer-content">
-        <div class="social-links">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+        <div class="social-links" style="justify-content: center">
+          <a href="https://www.facebook.com/budderstudio/"
+            ><i class="fab fa-facebook"></i>
+            <ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a href="https://www.instagram.com/budderstudio/"
+            ><i class="fab fa-instagram"></i
+            ><ion-icon name="logo-instagram"></ion-icon>
+          </a>
+          <a href="https://www.logo-twitter.com/budderstudio/"
+            ><i class="fab fa-twitter"></i
+            ><ion-icon name="logo-twitter"></ion-icon>
+          </a>
+          <a href="https://www.logo-linkedin.com/budderstudio/"
+            ><i class="fab fa-linkedin"></i
+            ><ion-icon name="logo-linkedin"></ion-icon>
+          </a>
+          <script
+            type="module"
+            src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+          ></script>
+          <script
+            nomodule
+            src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+          ></script>
         </div>
         <p class="copyright">© 2025 Creative Studio. All rights reserved.</p>
       </div>
