--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
           <div class="character-card" style="max-width: 400px">
             <div
               class="character-image"
-              style="
-                background-image: url('https://source.unsplash.com/random/400x300/?fantasy,warrior');
-              "
+              style="background-image: url('pics/pic\ 1.jpeg')"
             ></div>
             <div class="character-info">
               <h3>Peaceful Warrior</h3>
@@ -72,6 +70,16 @@
                 A fearless fighter with unmatched sword skills and unwavering
                 loyalty to the kingdom.
               </p>
+           <div class="poster-panel">
+            <img
+              src="pics/pic 2b.jpeg"
+              alt="Sunset"
+              class="poster-image"
+              data-full="pics/pic ful.jpeg"
+            />
+            <div class="poster-caption">
+              <h3>Dusk</h3>
+              <p>The beautiful ending</p>
             </div>
           </div>
         </div>
@@ -81,33 +89,21 @@
         <h2>Triptych Poster Collection</h2>
         <div class="triptych-container">
           <div class="poster-panel">
-            <img
-              src="https://source.unsplash.com/random/400x500/?sunrise"
-              alt="Sunrise"
-              class="poster-image"
-            />
+            <img src="pics/pic 2a.jpeg" alt="Sunrise" class="poster-image" />
             <div class="poster-caption">
               <h3>Dawn</h3>
               <p>The beginning of a new day</p>
             </div>
           </div>
           <div class="poster-panel">
-            <img
-              src="https://source.unsplash.com/random/400x500/?noon"
-              alt="Noon"
-              class="poster-image"
-            />
+            <img src="pics/pic 2b.jpeg" alt="Noon" class="poster-image" />
             <div class="poster-caption">
               <h3>Midday</h3>
               <p>The peak of daylight</p>
             </div>
           </div>
           <div class="poster-panel">
-            <img
-              src="https://source.unsplash.com/random/400x500/?sunset"
-              alt="Sunset"
-              class="poster-image"
-            />
+            <img src="pics/pic 2c.jpeg" alt="Sunset" class="poster-image" />
             <div class="poster-caption">
               <h3>Dusk</h3>
               <p>The beautiful ending</p>
@@ -189,7 +185,7 @@
             src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
           ></script>
         </div>
-        <p class="copyright">© 2025 Creative Studio. All rights reserved.</p>
+        <p class="copyright">© 2025 Buddhism Art in Ancient China.</p>
       </div>
     </footer>
     <script src="main.js"></script>
