--- a/play.html
+++ b/play.html
@@ -138,7 +138,7 @@
 
       /* Note: body.characters-active .character-image will be adjusted below */
       body.characters-active {
-        backdrop-filter: blur(8px);
+        /* Removed backdrop-filter to remove blur on characters page */
       }
 
       .page.active {
@@ -593,8 +593,9 @@
             <div class="character-info">
               <h3>Peaceful Warrior</h3>
               <p>
-                A fearless fighter with unmatched sword skills and unwavering
-                loyalty to the kingdom.
+                Buddha's teachings emphasize the importance of morality,
+                meditation, and wisdom in achieving a state of peace and freedom
+                from suffering
               </p>
             </div>
           </div>
@@ -630,8 +631,11 @@
               data-full="pics/pic ful.jpeg"
             />
             <div class="poster-caption">
-              <h3>Dawn</h3>
-              <p>The beginning of a new day</p>
+              <h3>Poverty</h3>
+              <p>
+                Poverty struggles because the government can't provide shelter
+                and health care like they always promise us. Lower class
+              </p>
             </div>
           </div>
           <div class="poster-panel">
@@ -643,7 +647,7 @@
             />
             <div class="poster-caption">
               <h3>Midday</h3>
-              <p>The peak of daylight</p>
+              <p>Middle class, trying to survive in this power economy</p>
             </div>
           </div>
           <div class="poster-panel">
@@ -654,8 +658,12 @@
               data-full="pics/pic ful.jpeg"
             />
             <div class="poster-caption">
-              <h3>Dusk</h3>
-              <p>The beautiful ending</p>
+              <h3>First class</h3>
+              <p>
+                First class Represent the first class in the economy and it
+                Represent rich people who work with the governments, and they
+                eat people's money
+              </p>
             </div>
           </div>
         </div>
